# IS-2020-prog-2-sem

./: CMakeLists.txt
homework1/: geometry.cpp  geometry.h  main.cpp
homework2/: NOTE  Polynomial.cpp  Polynomial.h  main.cpp  polynomial.cpp  polynomial.h
homework3/: Station.cpp  Station.h  main.cpp  output.txt
homework4/: predicate.hpp
homework5/: CircularBuffer.hpp  main.cpp
pugixml-1.11/: CMakeLists.txt
