cmake_minimum_required(VERSION 3.17)
project(IS_2020_prog_2_sem)

set(CMAKE_CXX_STANDARD 17)

#add_executable(IS_2020_prog_2_sem homework1/main.cpp homework1/geometry.cpp homework1/geometry.h)

#add_executable(IS_2020_prog_2_sem homework2/main.cpp homework2/Polynomial.cpp homework2/Polynomial.h)

#add_executable(IS_2020_prog_2_sem homework3/main.cpp homework3/Station.cpp homework3/Station.h pugixml-1.11/src/pugixml.cpp )

#add_executable(IS_2020_prog_2_sem homework4/main.cpp homework4/predicate.hpp)

add_executable(IS_2020_prog_2_sem homework5/main.cpp homework5/CircularBuffer.hpp)